# LocalMind

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
backend/: db.js  minio.js  package-lock.json  package.json  server.js
backend/middleware/: auth.js
backend/models/: chat.model.js  image.model.js  user.model.js  video.model.js
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/guards/: auth.guard.ts
frontend/src/app/pages/chat/: chat.component.ts
frontend/src/app/pages/image/: image.component.ts
frontend/src/app/pages/login/: login.component.ts
frontend/src/app/pages/settings/: settings.component.ts
frontend/src/app/pages/video/: video.component.ts
frontend/src/app/services/: ai.service.ts  auth.service.ts  generation.service.ts
frontend/src/app/shared/: icons.ts
frontend/src/assets/: config.example.js  config.js
scripts/: Dockerfile.image-server  Dockerfile.video-server  image_server.py  svd_server.py
src/: main.cpp
src/chat/: ChatClient.cpp  ChatClient.h
src/fileio/: FileIO.cpp  FileIO.h
src/http/: HttpClient.cpp  HttpClient.h
src/image/: ImageGen.cpp  ImageGen.h
src/video/: VideoGen.cpp  VideoGen.h
